Added delete feature to entries of guestbook

--- a/lib/autumnfarris_web/templates/entry/index.html.eex
+++ b/lib/autumnfarris_web/templates/entry/index.html.eex
@@ -5,6 +5,7 @@
 <tr>
 <td><%= render "entry.html", entry: entry %></td>
 <td><%= link "View", to: Routes.entry_path(@conn, :show, entry.id) %></td>
+<td><%= link "Delete", to: Routes.entry_path(@conn, :delete, entry), method: :delete, data: [confirm: "Are you sure?"]%></td>
 </tr>
 <% end %>
 </table>
